--- a/gamehub.client/src/components/UserPostsComponent.module.css
+++ b/gamehub.client/src/components/UserPostsComponent.module.css
@@ -25,14 +25,15 @@
     background-color: var(--clearblack);
 }
 
-.postHeader{
+.postHeader,
+.headerInfo{
     display: flex;
-    flex-direction: row;
     align-items: center;
+    flex-direction: row;
     gap: 5px;
 }
 
-.postHeader .postUser{
+.postHeader .headerControl{
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -40,15 +41,32 @@
     align-items: center;
 }
 
-.postUser .trashButton{
+.postOption{
     display: none;
 }
 
-.postUser .trashButton{
+.postOption .iconButton{
     padding: 2px;
     background-color: transparent;
     font-size: 18px;
     transition: all 0.3s ease;
+    margin: 0px 5px;
+}
+
+.iconButton .trashIcon,
+.iconButton .buttonIcon{
+    fill: var(--grey);
+    transition: all 0.3s ease;
+}
+
+.iconButton:hover .trashIcon{
+    fill: crimson;
+    transform: scale(1.3);
+}
+
+.iconButton:hover .buttonIcon{
+    fill: var(--turquoise);
+    transform: scale(1.3);
 }
 
 .postContent .postImage{
@@ -203,7 +221,7 @@
 }
 
 .divPost:hover .youSpan,
-.divPost:hover .trashButton{
+.divPost:hover .postOption{
     display: inline;
 }
 
