--- a/gamehub.client/src/components/Navbar.module.css
+++ b/gamehub.client/src/components/Navbar.module.css
@@ -12,15 +12,31 @@
     background-color: var(--lightBlack);
 }
 
-.ulNavbar{
-    display: flex;
-    align-items: center;
-    list-style: none;
-    gap: 1rem;
-    height: 100%;
+.logoLink{
+    width: 25%;
 }
 
-.ulNavbar .navbarLink, .ulNavbar li{
+.ulNavbar{
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    list-style: none;
+    gap: 10px;
+    height: 100%;
+}
+    
+
+.ulNavbar .navbarLink, .ulNavbar .navbarLink{
+    padding: 5px 15px;
+}
+
+.ulNavbar .navbarLink, .ulNavbar .navbarLink span{
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     font-size: 22px;
     font-weight: bold;
     letter-spacing: 1px;
@@ -28,8 +44,37 @@
     transition: all 0.2s ease-in-out;
     border: 2px solid transparent;
     border-radius: 50px;
-    padding: 5px 15px;
+}
+
+.profileOpt{
+    position: absolute;
+    bottom: -70px;
+    right: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 2px solid var(--mediumgrey);
+    background-color: var(--lightBlack);
+    padding: 5px 10px;
+}
+
+.profileOpt .option{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 5px;
     cursor: pointer;
+}
+
+.profileOpt .option:hover{
+    background-color: var(--deepgray);
 }
 
 .ulNavbar .navbarLink:hover{
@@ -38,16 +83,57 @@
     color: var(--black);
 }
 
-.ulNavbar li:hover{
+.ulNavbar .navbarLink:hover{
     transform: scale(1.1);
 }
 
-.ulNavbar button{
+.img{
+    border-radius: 50%;
+    min-width: 35px;
+    min-height: 35px;
+    max-width: 35px;
+    max-height: 35px;
+    object-fit: cover;
+    border: 2px solid var(--black);
+}
+
+.searchBar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+    height: 40px;
+    margin-top: 10px;
+    position: relative;
+}
+
+.searchBar .icon{
+    position: absolute;
+    fill: var(--grey);
+    left: 10px;
+    transition: all 0.3s ease;
+}
+
+.searchBar input{
     width: 100%;
-    padding: 5px 20px;
-    transition: all 0.2s ease-in-out;
+    height: 100%;
+    padding: 10px 35px;
+    border: 2px solid var(--grey);
+    border-radius: 10px;
+    font-size: 16px;
+    color: whitesmoke;
+    background-color: transparent;
+    transition: all 0.3s ease;
 }
 
-.divNavbar button:hover{
-    transform: scale(1.1);
+.searchBar input:focus,
+.searchBar:focus-within .icon{
+    color: var(--turquoise);
+    border-color: var(--turquoise);
+    fill: var(--turquoise);
+}
+
+.searchBar input::placeholder{
+    font-size: 14px;
 }
