--- a/gamehub.client/src/components/Sidebar.module.css
+++ b/gamehub.client/src/components/Sidebar.module.css
@@ -16,6 +16,19 @@
 .sideDiv:hover{
     width: 250px;
     gap: 3rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--mediumgrey);
+    border-radius: 5px;
 }
 
 .sideDiv:hover .sideIcon{
@@ -82,10 +95,6 @@
 }
 
 .sideDiv .sideContent{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     display: none;
     overflow: hidden;
     animation-duration: 1s;
@@ -95,7 +104,8 @@
     height: 100%;
     transition: all 0.3s ease;
 }
-/* é a partir daqui que eu estava tentando arrumar o parágrafo */
+
+
 .sideDiv .sideContent .divData{
     width: 100%;
     display: flex;
