--- a/gamehub.client/src/routes/ListCommunities.module.css
+++ b/gamehub.client/src/routes/ListCommunities.module.css
@@ -123,7 +123,19 @@
     box-shadow: 0px 0px 10px var(--darkSlateGray);
 }
 
-.communityData img{  
+.communityData .communityBackground{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    min-height: 70px;
+    max-height: 70px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.communityData .communityImg{  
     min-width: 100px;
     min-height: 100px;
     max-width: 100px;
@@ -131,6 +143,7 @@
     border-radius: 100%;
     object-fit: cover;
     border: 2px solid var(--black);
+    z-index: 1;
 }
 
 .communityData p{
