--- a/gamehub.client/src/routes/ListFollowingCommunity.module.css
+++ b/gamehub.client/src/routes/ListFollowingCommunity.module.css
@@ -95,7 +95,7 @@
 
 .userData{
     width: 160px;
-    height: 160px;
+    height: 170px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -115,7 +115,19 @@
     box-shadow: 0px 0px 10px var(--darkSlateGray);
 }
 
-.userData img{  
+.userData .userBackground{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    min-height: 70px;
+    max-height: 70px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.userData .userImg{  
     min-width: 100px;
     min-height: 100px;
     max-width: 100px;
@@ -123,6 +135,7 @@
     border-radius: 100%;
     object-fit: cover;
     border: 2px solid var(--black);
+    z-index: 1;
 }
 
 .userData p{
