--- a/gamehub.client/src/routes/SearchList.module.css
+++ b/gamehub.client/src/routes/SearchList.module.css
@@ -14,47 +14,6 @@
     gap: 2rem;
 }
 
-.searchBar{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 40%;
-    height: 40px;
-    margin-top: 10px;
-    position: relative;
-}
-
-.searchBar .icon{
-    position: absolute;
-    fill: var(--grey);
-    left: 10px;
-    transition: all 0.3s ease;
-}
-
-.searchBar input{
-    width: 100%;
-    height: 100%;
-    padding: 10px 35px;
-    border: 2px solid var(--grey);
-    border-radius: 10px;
-    font-size: 16px;
-    color: var(--whitesmoke);
-    background-color: transparent;
-    transition: all 0.3s ease;
-}
-
-.searchBar input:focus,
-.searchBar:focus-within .icon{
-    color: var(--turquoise);
-    border-color: var(--turquoise);
-    fill: var(--turquoise);
-}
-
-.searchBar input::placeholder{
-    font-size: 14px;
-}
-
 .content{
     display: flex;
     flex-direction: column;
@@ -89,9 +48,15 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    gap: 1rem;
 }
 
-.communityDiv{
+.mainContent h2{
+    margin-top: 2rem;
+    color: var(--whitesmoke);
+}
+
+.dataDiv{
     display: flex;
     flex: row;
     align-items: center;
@@ -101,7 +66,7 @@
     gap: 2rem;
 }
 
-.communityData{
+.data{
     width: 160px;
     height: 170px;
     display: flex;
@@ -117,13 +82,13 @@
     position: relative;
 }
 
-.communityData:hover{
+.data:hover{
     transform: scale(1.1);
     border-color: var(--turquoise);
     box-shadow: 0px 0px 10px var(--darkSlateGray);
 }
 
-.communityData .communityBackground{
+.data .background{
     position: absolute;
     top: 0;
     width: 100%;
@@ -135,7 +100,7 @@
     z-index: 0;
 }
 
-.communityData .communityImg{  
+.data .img{  
     min-width: 100px;
     min-height: 100px;
     max-width: 100px;
@@ -146,7 +111,7 @@
     z-index: 1;
 }
 
-.communityData p{
+.data p{
     color: var(--lightGrey);
     width: 100%;
     word-wrap: break-word;
@@ -157,11 +122,4 @@
     font-size: 16px;
     color: var(--grey);
     cursor: default;
-}
-
-.youSpan{
-    position: absolute;
-    font-size: 14px;
-    color: var(--grey);
-    bottom: 0;
 }
