--- a/gamehub.client/src/index.css
+++ b/gamehub.client/src/index.css
@@ -143,7 +143,11 @@ h1, .linkLogo, .logoDetail{
 }
 
 .loading{
-  margin: 2rem 2rem;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .iconOpinion{
