--- a/gamehub.client/src/components/UpdateUserComponnent.module.css
+++ b/gamehub.client/src/components/UpdateUserComponnent.module.css
@@ -47,3 +47,38 @@
 .formEditUser div:focus-within label{
     color: var(--turquoise);
 }
+
+.btnDelete {
+    background-color: crimson;
+    color: var(--whitesmoke);
+    padding: 5px 18px 5px 15px;
+    font-size: 22px;
+    font-weight: bold;
+    border: 2px solid var(--clearblack);
+    border-radius: 50px;
+    opacity: 0.7;
+    transition: all 0.2s ease-in-out;
+}
+
+.btnDelete:hover {
+    border-color: var(--black);
+    opacity: 1;
+    transform: scale(1.02);
+}
+
+.confirmDiv{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--clearblack);
+    gap: 5rem;
+    z-index: 2;
+}
+
+.confirmDiv button{
+    font-size: 30px;
+}
