--- a/gamehub.client/src/routes/Register.module.css
+++ b/gamehub.client/src/routes/Register.module.css
@@ -174,6 +174,58 @@
     font-size: 1.2rem;
 }
 
+.btnCpf {
+    position: relative;
+    margin-top: 15px;
+    font-size: 16px;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btnCpf:hover {
+    color: var(--turquoise);
+}
+
+.cpfGenerated{
+    letter-spacing: 1.5px;
+    font-size: 18px;
+    text-shadow: 0 0 1px var(--turquoise);
+    border-bottom: 2px solid var(--turquoise);
+    cursor: copy;
+}
+
+.formControl div label{
+    display: flex;
+    align-items: center;
+}
+
+.formControl .fieldsSideBySide,
+.formControl .inputEmail{
+    position: relative;
+}
+
+.iconBtn .icon{
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.divAlert{
+    top: 25px;
+    position: absolute;
+    background-color: var(--clearblack);
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid var(--turquoise);
+    z-index: 2;
+}
+
+.divAlert span{
+    color: var(--lightGrey);
+    text-shadow: 0 0 0.5px var(--turquoise);
+    font-size: 14px;
+}
+
 /* tablets */
 @media (max-width: 880px) {
     .registerContainer{
