--- a/gamehub.client/src/components/MakePostForm.module.css
+++ b/gamehub.client/src/components/MakePostForm.module.css
@@ -125,3 +125,14 @@
     font-weight: bold;
     transform: scale(1.1);
 }
+
+.button:disabled{
+    background-color: var(--deepgray);
+    color: var(--whitesmoke);
+    cursor: default;
+}
+
+.button:disabled:hover{
+    font-weight: normal;
+    transform: none;
+}
