--- a/gamehub.client/src/routes/ForgotPassword.module.css
+++ b/gamehub.client/src/routes/ForgotPassword.module.css
@@ -1,4 +1,4 @@
-.divCenter{
+.divCenter {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,7 +9,7 @@
     gap: 2rem;
 }
 
-.divCenter .div{
+.divCenter .div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,13 +21,13 @@
     border: 2px solid var(--turquoise);
 }
 
-.divCenter .div label{
+.divCenter .div label {
     color: var(--whitesmoke);
     text-align: center;
     font-size: 18px;
 }
 
-.divInput input{
+.divInput input {
     background-color: transparent;
     padding: 2px 5px;
     border: 2px solid transparent;
@@ -37,22 +37,47 @@
     transition: all 0.3s ease;
 }
 
-.divInput input:focus{
+.divInput input:focus {
     border-left-color: var(--turquoise);
     border-bottom-color: var(--turquoise);
 }
 
-.divInput label{
+.divInput label {
     color: var(--whitesmoke);
     font-size: 20px;
 }
 
-.divPassword p{
+.divPassword p {
     font-size: 18px;
     color: var(--whitesmoke);
 }
 
-.divPassword p span{
+.divPassword p span {
     font-size: 18px;
     color: var(--turquoise);
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+    
+}
+
+/* Tablet */
+@media (max-width: 768px) {
+    .divCenter .div {
+        gap: 2rem;
+    }
+}
+
+/* Desktop */
+@media (max-width: 1024px) {
+    .divCenter .div {
+        width: 80%;
+        padding: 18px 10px;
+    }
+}
+
+/* Large Desktop */
+@media (min-width: 1025px) {
+
 }
