--- a/gamehub.client/src/components/CommentsForm.module.css
+++ b/gamehub.client/src/components/CommentsForm.module.css
@@ -1,4 +1,4 @@
-.divComments{
+.divComments {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,12 +6,12 @@
     gap: 1rem;
 }
 
-.formComment{
+.formComment {
     position: relative;
     width: 100%;
 }
 
-.formComment textarea{
+.formComment textarea {
     background-color: transparent;
     border: 2px solid var(--mediumgrey);
     color: var(--whitesmoke);
@@ -26,12 +26,12 @@
     transition-property: border, padding, color, min-height;
 }
 
-.formComment textarea:hover{
+.formComment textarea:hover {
     transition: all 0.2s;
     border-color: var(--grey);
 }
 
-.formComment textarea:focus{
+.formComment textarea:focus {
     border-color: var(--turquoise);
     color: var(--turquoise);
     padding-right: 55px;
@@ -39,7 +39,7 @@
     min-height: 114px;
 }
 
-.footerFormComment{
+.footerFormComment {
     position: absolute;
     padding: 18px 26px;
     right: 0;
@@ -47,7 +47,7 @@
     display: none;
 }
 
-.footerFormComment button{
+.footerFormComment button {
     background-color: transparent;
     border-bottom: 2px solid transparent;
     border-top-left-radius: 5px;
@@ -58,23 +58,23 @@
     transition: all 0.2s ease-in-out;
 }
 
-.footerFormComment button:hover{
+.footerFormComment button:hover {
     background-color: var(--clearblack);
     color: var(--lightGrey);
     border-bottom-color: var(--lightGrey);
 }
 
-.formComment:focus-within .footerFormComment{
+.formComment:focus-within .footerFormComment {
     display: flex;
 }
 
-.divCommentsList{
+.divCommentsList {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.containerComments{
+.containerComments {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -83,23 +83,23 @@
     gap: 5px;
 }
 
-.containerComments:hover{
+.containerComments:hover {
     transition: all 0.3s ease;
     background-color: rgba(30, 30, 30);
 }
 
-.commentHeader{
+.commentHeader {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .containerComments:hover .youSpan,
-.containerComments:hover .trashButton{
+.containerComments:hover .trashButton {
     display: inline;
 }
 
-.commentHeader div{
+.commentHeader div {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -107,7 +107,7 @@
     gap: 5px;
 }
 
-.commentHeader img{
+.commentHeader img {
     border-radius: 50%;
     width: 35px;
     height: 35px;
@@ -115,41 +115,41 @@
     box-shadow: 0px 0px 5px var(--black);
 }
 
-.commentHeader .name{
+.commentHeader .name {
     font-size: 18px;
     color: var(--lightGrey);
     font-weight: bold;
 }
 
-.commentHeader .trashButton{
+.commentHeader .trashButton {
     padding: 2px;
     background-color: transparent;
     font-size: 18px;
     transition: all 0.3s ease;
 }
 
-.trashButton{
+.trashButton {
     display: none;
 }
 
-.trashButton .trashIcon{
+.trashButton .trashIcon {
     fill: var(--grey);
     transition: all 0.3s ease;
 }
 
-.trashButton:hover .trashIcon{
+.trashButton:hover .trashIcon {
     fill: crimson;
     transform: scale(1.3);
 }
 
-.commentContent .content{
+.commentContent .content {
     font-size: 16px;
     color: var(--lightGrey);
     max-width: 100%;
     overflow-wrap: break-word;
 }
 
-.commentFooter{
+.commentFooter {
     padding-top: 5px;
     display: flex;
     flex-direction: row;
@@ -157,40 +157,41 @@
     gap: 8px;
 }
 
-.commentFooter button{
+.commentFooter button {
     background-color: transparent;
     font-size: 17px;
 }
 
-.commentFooter .commentIcon, .commentFooter .commentIconDislike{
+.commentFooter .commentIcon,
+.commentFooter .commentIconDislike {
     transition: all 0.3s ease;
 }
 
-.commentFooter .commentIcon:hover{
+.commentFooter .commentIcon:hover {
     fill: var(--turquoise);
     transform: scale(1.2);
 }
 
-.commentFooter .commentIconDislike:hover{
+.commentFooter .commentIconDislike:hover {
     fill: crimson;
     transform: scale(1.2);
 }
 
-.opinionActivatedLike{
+.opinionActivatedLike {
     fill: var(--turquoise);
     transform: scale(1.3);
 }
 
-.opinionActivatedDislike{
+.opinionActivatedDislike {
     fill: crimson;
     transform: scale(1.3);
 }
 
-.divLike{
+.divLike {
     position: relative;
 }
 
-.divLike p{
+.divLike p {
     position: absolute;
     margin-top: 0 auto;
     width: 100%;
@@ -198,8 +199,42 @@
     color: var(--grey);
 }
 
-.youSpan{
+.youSpan {
     display: none;
     font-size: 12px;
     color: var(--grey);
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+    .formComment textarea {
+        min-height: 40px;
+        font-size: 14px;
+    }
+
+    .commentHeader img {
+        width: 25px;
+        height: 25px;
+    }
+
+    .commentHeader .name {
+        font-size: 15px;
+    }
+
+    .commentHeader .trashButton {
+        font-size: 12px;
+        padding: 0;
+    }
+
+    .commentFooter button {
+        font-size: 14px;
+    }
+
+    .commentContent .content {
+        font-size: 14px;
+    }
+
+    .youSpan {
+        font-size: 10px;
+    }
 }
