--- a/gamehub.client/src/components/UserPostsComponent.module.css
+++ b/gamehub.client/src/components/UserPostsComponent.module.css
@@ -369,7 +369,90 @@
     border-color: var(--turquoise);
     color: var(--whiteSmoke);
 }
-
-.pagination .able:hover .icon{
+.pagination .able:hover .icon {
     fill: var(--turquoise);
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+    .pagination{
+        justify-content: space-around;
+        width: 100%;
+        gap: 5px;
+    }
+
+    .pagination button{
+        font-size: 12px;
+        gap: 2px;
+        padding: 0px;
+    }
+
+    .divPost:hover .youSpan {
+        display: block;
+    }
+
+    .divPost:hover .postOption {
+        display: flex;
+    }
+
+    .youSpan{
+        font-size: 10px;
+    }
+
+    .postOption{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 30px;
+    }
+
+    .postHeader .headerControl{
+        justify-content: none;
+    }
+
+    .iconButton{
+        font-size: 12px;
+        margin: 0 4px;
+        padding: 0;
+    }
+
+    .postHeader img{
+        border-radius: 50%;
+        max-width: 30px;
+        min-width: 30px;
+        max-height: 30px;
+        min-height: 30px;
+    }
+    
+    .postHeader p, .author, .date{
+        font-size: 12px;
+        color: var(--lightGrey);
+    }
+    
+    .postHeader .author{
+        font-weight: bold;
+        font-size: 15px;
+    }
+
+    .postContent .title{
+        font-size: 18px;
+    }
+
+    .postContent .content{
+        font-size: 15px;
+    }
+}
+
+/* Tablet */
+@media (min-width: 481px) and (max-width: 768px) {
+    .postContent .title{
+        font-size: 20px;
+    }
+}
+
+/* Desktop */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .postContent .title{
+        font-size: 25px;
+    }
 }
