--- a/gamehub.client/src/routes/Register.module.css
+++ b/gamehub.client/src/routes/Register.module.css
@@ -253,5 +253,10 @@
         font-size: 1rem;
         width: 50%;
     }
-    
+    .divGenCpf{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
