--- a/gamehub.client/src/routes/SearchList.module.css
+++ b/gamehub.client/src/routes/SearchList.module.css
@@ -1,9 +1,9 @@
-.divMain{
+.divMain {
     display: flex;
     flex-direction: column;
 }
 
-.divCenter{
+.divCenter {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +14,7 @@
     gap: 2rem;
 }
 
-.content{
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +23,7 @@
     width: 70%;
 }
 
-.contentHearder{
+.contentHearder {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,18 +31,18 @@
     gap: 5px;
 }
 
-.contentHearder h3{
+.contentHearder h3 {
     color: var(--lightGrey);
     font-size: 24px;
 }
 
-.contentHearder p{
+.contentHearder p {
     color: var(--grey);
     font-size: 16px;
     font-weight: bold;
 }
 
-.mainContent{
+.mainContent {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,12 +51,12 @@
     gap: 1rem;
 }
 
-.mainContent h2{
+.mainContent h2 {
     margin-top: 2rem;
     color: var(--whitesmoke);
 }
 
-.dataDiv{
+.dataDiv {
     display: flex;
     flex: row;
     align-items: center;
@@ -66,7 +66,7 @@
     gap: 2rem;
 }
 
-.data{
+.data {
     width: 160px;
     height: 170px;
     display: flex;
@@ -82,13 +82,13 @@
     position: relative;
 }
 
-.data:hover{
+.data:hover {
     transform: scale(1.1);
     border-color: var(--turquoise);
     box-shadow: 0px 0px 10px var(--darkSlateGray);
 }
 
-.data .background{
+.data .background {
     position: absolute;
     top: 0;
     width: 100%;
@@ -100,7 +100,7 @@
     z-index: 0;
 }
 
-.data .img{  
+.data .img {
     min-width: 100px;
     min-height: 100px;
     max-width: 100px;
@@ -111,15 +111,127 @@
     z-index: 1;
 }
 
-.data p{
+.data p {
     color: var(--lightGrey);
     width: 100%;
     word-wrap: break-word;
     text-align: center;
 }
 
-.noRegistry{
+.noRegistry {
     font-size: 16px;
     color: var(--grey);
     cursor: default;
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+    .content h3,
+    .content span,
+    .mainContent h2{
+        text-align: center;
+    }
+
+    .content {
+        width: 50%;
+    }
+
+    .data {
+        width: 80px;
+        height: 130px;
+        gap: 5px;
+    }
+
+    .data .background {
+        min-height: 45px;
+        max-height: 45px;
+    }
+    
+    .data .img {
+        min-width: 55px;
+        min-height: 55px;
+        max-width: 55px;
+        max-height: 55px;
+    }
+
+    .data p {
+        font-size: 15px;
+    }
+}
+
+/* Tablet */
+@media (min-width: 481px) and (max-width: 768px) {
+    .content h3,
+    .content span,
+    .mainContent h2{
+        text-align: center;
+    }
+
+    .content {
+        width: 50%;
+    }
+
+    .data {
+        width: 130px;
+        height: 150px;
+        gap: 5px;
+    }
+
+    .data .background {
+        min-height: 60px;
+        max-height: 60px;
+    }
+    
+    .data .img {
+        min-width: 65px;
+        min-height: 65px;
+        max-width: 65px;
+        max-height: 65px;
+    }
+
+    .data p {
+        font-size: 15px;
+    }
+}
+
+/* Desktop */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .content {
+        width: 60%;
+    }
+
+    .content h3,
+    .content span,
+    .mainContent h2{
+        text-align: center;
+    }
+
+    .data {
+        width: 130px;
+        height: 150px;
+        gap: 5px;
+    }
+
+    .data .background {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        min-height: 60px;
+        max-height: 60px;
+    }
+    
+    .data .img {
+        min-width: 80px;
+        min-height: 80px;
+        max-width: 80px;
+        max-height: 80px;
+        border-radius: 100%;
+        object-fit: cover;
+        border: 2px solid var(--black);
+        z-index: 1;
+    }
+    
+    .data p {
+        font-size: 15px;
+    }
 }
